@@ -37,87 +37,58 @@ public class RelayController {
      * @param state Enum State
      */
     public static void setRelay(Board board, Relay relay, State state) {
-        String cmd = "i2cset -y 1"
-                + " " + String.format("0x%02X", board.getAddress())
-                + " " + String.format("0x%02X", relay.getChannel())
-                + " " + String.format("0x%02X", state.getValue());
+        execute(new String[]{
+                "i2cset",
+                "-y, ",
+                "1",
+                String.format("0x%02X", board.getAddress()),
+                String.format("0x%02X", relay.getChannel()),
+                String.format("0x%02X", state.getValue())
+        });
 
-        execute(cmd);
-
-        System.out.println(relay + " on " + board + " set to " + state
-                + " with command: " + cmd);
+        System.out.println(relay + " on " + board + " set to " + state);
     }
 
     /**
      * Execute the given command, this is called by the public methods.
      *
-     * @param cmd String command to be executed.
+     * @param cmd String array command to be executed.
      */
-    private static void execute(String cmd) {
+    private static String execute(String[] cmd) {
         try {
-            // Get a process to be able to do native calls on the operating system.
-            // You can compare this to opening a terminal window and running a command.
-            Process p = Runtime.getRuntime().exec(cmd);
+            // Create a ProcessBuilder with the command and arguments
+            ProcessBuilder processBuilder = new ProcessBuilder(cmd);
 
-            // Get the error stream of the process and print it
-            // so we will now if something goes wrong.
-            InputStream error = p.getErrorStream();
-            for (int i = 0; i < error.available(); i++) {
-                System.out.println("CMD error: " + error.read());
+            // Redirect error stream to output stream for easier handling
+            processBuilder.redirectErrorStream(true);
+
+            // Start the process
+            Process p = processBuilder.start();
+
+            // Get the output stream, this is the result of the command we give.
+            StringBuilder output = new StringBuilder();
+            try (BufferedReader input = new BufferedReader(
+                    new InputStreamReader(p.getInputStream()))) {
+                String line;
+                while ((line = input.readLine()) != null) {
+                    output.append(line);
+                }
             }
 
-            // Get the output stream of the process and print it
-            String line;
-            BufferedReader input = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            while ((line = input.readLine()) != null) {
-                System.out.println("CMD info: " + line);
-            }
-            input.close();
+            // Wait for the process to complete
+            p.waitFor();
 
-            // We don't need the process anymore.
-            p.destroy();
+            System.out.println("'" + String.join(" ", cmd) + "' returned: " + output);
+
+            // Return the result of the command.
+            return output.toString();
         } catch (IOException e) {
             System.err.println(e.getMessage());
+            return "";
+        } catch (InterruptedException e) {
+            System.err.println("Process was interrupted: " + e.getMessage());
+            Thread.currentThread().interrupt();
+            return "";
         }
     }
-
-    /*
-    // I²C seems to be broken in Pi4J when used with after Java 8.
-    // So below code doesn't work, but is added here as a reference.
-
-    private I2CBus i2c;
-
-    public RelayController() {
-        try {
-            this.i2c = I2CFactory.getInstance(I2CBus.BUS_1);
-        } catch (UnsupportedBusNumberException ex) {
-            System.err.println("Bus number not supported: "
-                    + ex.getMessage());
-            this.i2c = null;
-        } catch (IOException ex) {
-            System.err.println("Error while initializing the relay controller: "
-                    + ex.getMessage());
-            this.i2c = null;
-        }
-    }
-
-    public void setRelay(Board board, Relay relay, State state) {
-        System.out.println("Setting relay on board "
-                + String.format("0x%02X", board.getAddress())
-                + ", relay " + String.format("0x%02X", relay.getChannel())
-                + ", state " + String.format("0x%02X", state.getValue()));
-
-        if (this.i2c == null) {
-            System.err.println("I²C not available");
-            return;
-        }
-
-        try {
-            I2CDevice device = i2c.getDevice(board.getAddress());
-            device.write(relay.getChannel(), state.getValue());
-        } catch (IOException ex) {
-            System.err.println("Error while setting relay: " + ex.getMessage());
-        }
-    }
-    */
 }
